<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sport.infoquest.activity.LoginActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailAddressText"
        android:text="@string/insert_email_address"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_address"
        android:textColorHint="@color/white"
        android:ems="12"
        android:id="@+id/create_email_address"
        android:layout_gravity="center"
        android:layout_below="@+id/emailAddressText"
        android:layout_alignStart="@+id/emailAddressText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInsertText"
        android:text="@string/password_insert_text"
        android:layout_below="@+id/create_email_address"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_new_password"
        android:textColorHint="@color/white"
        android:ems="12"
        android:id="@+id/password_insert_new_accout"
        android:layout_gravity="center"
        android:layout_below="@+id/passwordInsertText"
        android:layout_alignStart="@+id/create_email_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordRepeatInsertText"
        android:text="@string/password_repeat_insert_text"
        android:layout_below="@+id/password_insert_new_accout"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_repeat_password"
        android:textColorHint="@color/white"
        android:ems="12"
        android:id="@+id/password_repeat_insert_new_accout"
        android:layout_below="@+id/passwordRepeatInsertText"
        android:layout_alignStart="@+id/password_insert_new_accout" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreateAccount"
        android:background="@color/btn_login_bg"
        android:text="@string/btn_new_account"
        android:textColor="@color/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/emailAddressText"
        android:layout_alignStart="@+id/password_repeat_insert_new_accout" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_account_title"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>