<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sport.infoquest.activity.LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frame_username"
        android:layout_marginTop="220dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/frame_password"
        android:layout_alignEnd="@+id/frame_password">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageUsername"
            android:src="@drawable/username_icon_login"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="2dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:textColorHint="@color/white"
            android:ems="12"
            android:id="@+id/username"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_password"
        android:layout_below="@+id/frame_username"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"


        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            android:hint="@string/hint_password"
            android:textColorHint="@color/white"
            android:id="@+id/password"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/username"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagePassword"
            android:src="@drawable/ic_lock"
            android:layout_gravity="left|center_vertical" />


    </FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:background="@color/btn_login_bg"
        android:text="@string/btn_login"
        android:textColor="@color/btn_login"
        android:layout_below="@+id/frame_password"
        android:layout_marginTop="77dp"
        android:layout_alignEnd="@+id/frame_password"
        android:layout_alignStart="@+id/frame_password" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNewAccount"
        android:background="@color/btn_login_bg"
        android:text="@string/btn_new_account"
        android:textColor="@color/btn_login"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="13dp"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/imageLogo"
        android:layout_marginTop="5dp"
        android:src="@drawable/circle_qr_custom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:text="@string/intro_description"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"/>

</RelativeLayout>